# rtest

./: .gitignore  Cargo.toml
data/: ans_02.md  ans_15.md  ask.md  ask_compare.md
examples/: agent_desc.rs  agent_routing.rs  agent_with_ollama.rs  agent_with_ollama_remote.rs  aho_test.rs  choice.rs  date_events.rs  extract.rs  function_routing.rs  image_ollama.rs  ollama_streaming.rs  ollama_streaming_pause_control.rs  ollama_streaming_with_tools.rs  sample.rs
locales/: de.ftl  en.ftl
self/: self.md
src/: helper.rs  lang.rs  lib.rs  main.rs  promot_cotext.rs  tools.rs
