[package]
name = "rig_test"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.100"
base64 = "0.22.1"
image = "0.25.9"
rig-core = "0.26.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http = "1.3.1"
serde = "1.0.228"
serde_json = "1.0.145"
futures = "0.3.31"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"

